tests/reference/asr-coarray_03-4175695.stderr
semantic error: Variable 'x' is not a coarray; coindex notation [..] requires a codimension attribute
 --> tests/errors/coarray_03.f90:4:5
  |
4 | x = x[1]
  |     ^^^^ 
